--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,7 @@ name = "zero2prod"
 reqwest = "0.11"
 
 [dependencies]
+config = "0.13"
 actix-web = "4"
 tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
 serde = { version = "1", features = ["derive"]}
