--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,6 +18,8 @@ config = "0.13"
 actix-web = "4"
 tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
 serde = { version = "1", features = ["derive"]}
+chrono = { version = "0.4.22", default-features = false, features = ["clock"] }
+uuid = { version = "1.10.0", features = ["v4"] }
 
 [dependencies.sqlx]
 version = "0.7"
