--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,7 +14,7 @@ name = "zero2prod"
 reqwest = "0.11"
 
 [dependencies]
-log = "0.4"
+tracing = { version = "0.1", features = ["log"] }
 env_logger = "0.9"
 config = "0.13"
 actix-web = "4"
