--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,7 +15,9 @@ reqwest = "0.11"
 
 [dependencies]
 tracing = { version = "0.1", features = ["log"] }
-env_logger = "0.9"
+tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
+tracing-bunyan-formatter = "0.3"
+tracing-log = "0.1"
 config = "0.13"
 actix-web = "4"
 tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
