--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,7 @@ reqwest = "0.11"
 once_cell = "1"
 
 [dependencies]
+secrecy = { version = "0.8", features = ["serde"]}
 tracing-log = "0.1"
 tracing = { version = "0.1", features = ["log"] }
 tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
