--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,7 @@ reqwest = "0.11"
 once_cell = "1"
 
 [dependencies]
+serde-aux = "4"
 tracing-actix-web = "0.7"
 secrecy = { version = "0.8", features = ["serde"]}
 tracing-log = "0.1"
