--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,32 +11,29 @@ path = "src/lib.rs"
 path = "src/main.rs"
 name = "zero2prod"
 
-[dev-dependencies]
-reqwest = "0.11"
-once_cell = "1"
-
 [dependencies]
-serde-aux = "4"
-secrecy = { version = "0.8"}
-tracing-log = "0.1"
-tracing = { version = "0.1", features = ["log"] }
-tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
-tracing-bunyan-formatter = "0.3"
-config = "0.13"
 actix-web = "4"
 tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
-serde = { version = "1", features = ["derive"]}
-chrono = { version = "0.4.22", default-features = false, features = ["clock"] }
-uuid = { version = "1.10.0", features = ["v4"] }
-
-[dependencies.sqlx]
-version = "0.7"
-default-features = false
-features = [
+serde = "1.0.115"
+config = { version = "0.14", default-features = false, features = ["yaml"] }
+sqlx = { version = "0.8", default-features = false, features = [
     "runtime-tokio-rustls",
     "macros",
     "postgres",
     "uuid",
     "chrono",
-    "migrate"
-]
+    "migrate",
+] }
+uuid = { version = "1", features = ["v4"] }
+chrono = { version = "0.4.22", default-features = false, features = ["clock"] }
+tracing = "0.1.19"
+tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
+tracing-bunyan-formatter = "0.3.1"
+serde-aux = "4"
+tracing-log = "0.2.0"
+tracing-actix-web = "0.7"
+secrecy = { version = "0.8", features = ["serde"] }
+
+[dev-dependencies]
+reqwest = { version = "0.12", features = ["json"] }
+once_cell = "1"
